# security_agent

./: Cargo.toml  build.rs  security_agent.manifest
src/: lib.rs  main.rs
src/agent/: config.rs  mod.rs  service.rs
src/detection/: behavior.rs  ml.rs  mod.rs
src/monitors/: browser.rs  file.rs  mod.rs  network.rs  process.rs
src/protection/: browser.rs  file.rs  mod.rs  network.rs  process.rs
src/ui/: alerts.rs  logger.rs  mod.rs  tray.rs
src/utils/: logger.rs  mod.rs
