[package]
name = "security_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Windows API bindings
windows = { version = "0.48", features = [
    "Win32_Foundation", 
    "Win32_Security", 
    "Win32_Security_Authorization",  # Add this line
    "Win32_System_Threading", 
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus", 
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_System_WindowsProgramming"
]}


# System monitoring
sysinfo = "0.29"
notify = "5.1"  # File system monitoring

# Network monitoring
pcap = "1.1"
trust-dns-resolver = "0.22"  # DNS monitoring

# Process monitoring and isolation
ntapi = "0.4"  # Native API access

# Safe concurrency
tokio = { version = "1.28", features = ["full"] }
crossbeam = "0.8"

# Database for local storage
rusqlite = { version = "0.29", features = ["bundled"] }

# Machine learning for behavior analysis
onnxruntime = "0.0.14"
ndarray = "0.15"
smart-default = "0.6"

# User interface
native-windows-gui = "1.0"
native-windows-derive = "1.0"

# Utilities
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
directories = "5.0"  # For configuration files
base64 = "0.21"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true        # Link-time optimization
codegen-units = 1 # Optimize for size and speed
opt-level = 3     # Maximum optimization
panic = "abort"   # Minimize binary size
strip = true      # Strip symbols